# FuseOmni

./: .gitignore  README.md  concurrent_download.sh
datasets/: DATASETS_CATALOG.md  README.md  convert_utils.py  download_and_process.sh  download_datasets.py  download_ms.py  quickstart.py  run_all.sh
eval/: README.md  __init__.py  download_datasets.py  eval.py  registry.py  requirements.txt  schema.py
ms-swift/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  README.md  README_CN.md  setup.cfg  setup.py
reap/: .dockerignore  .env.template  .gitignore  .gitmodules  Dockerfile  GEMINI.md  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  report.md
reap/config/: plt_plot_style.mplstyle
reap/config/wildbench_prod_env_XXXX.example/: credentials.conf.example  model_deployments.yaml.example  model_metadata.yaml  tokenizer_configs.yaml
reap/experiments/: calibrate.sh  eval.sh  generation_quality_analysis.sh  hc_smoe.sh  m_smoe.sh  merging-cli.sh  merging.sh  merging_restricted_clusters.sh  plot-qwen3-omni.sh  prune-qwen3-omni.sh  pruning-cli.sh  pruning.sh  sft-resume.sh  sft.sh  submoe.sh  submoe_v2.sh  ttm.sh
reap/scripts/: build.sh  clean_merged_models.py  generation_quality_analysis.py  model_params.py  moe_functional_subspace_analysis.py  parse_results.py  patch_deepseek.py  patch_ernie4_5.py  patch_glm.py  report_evals.py  report_results.py
reap/src/reap/: args.py  cluster.py  cluster_plots.py  data.py  eval.py  main.py  merge.py  metrics.py  model_util.py  observer.py  permute.py  prune.py  restricted_cluster.py
reap/src/reap/models/: modeling_deepseek.py  modeling_ernie4_5_moe.py  tokenization_ernie4_5.py
reap/src/reap/models/glm/: config.json  modeling_glm4_moe.py
reap/tests/: test_observer.py
survey/: REAP-OMNI_Deep_Survey.md
(+1225 files in other folders)
